objects/Hello_Object_del__c.object
<CustomObject>
    <description>Changes for PS deployment check</description>
    <fields>
        <fullName>Hello_Object_Del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hello Object Del</label>
        <referenceTo>Hello_Object_del__c</referenceTo>
        <relationshipLabel>Hello Object Del</relationshipLabel>
        <relationshipName>Hello_Object_Del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hello_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hello Object</label>
        <referenceTo>Hello_Object__c</referenceTo>
        <relationshipLabel>Hello Object Del</relationshipLabel>
        <relationshipName>Hello_Object_Del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <description>Changing to test PS deployment</description>
        <label>New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList__c</fullName>
        <label>PickList</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change  email</fullName>
                    <color>#FFFF66</color>
                    <label>Change  email</label>
                </value>
                <value>
                    <fullName>Problem  email</fullName>
                </value>
                <value>
                    <fullName>· Special¶±Problem email</fullName>
                </value>
                <value>
                    <fullName>Problem email</fullName>
                </value>
                <value>
                    <fullName>^S</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Don</fullName>
                </value>
                <value>
                    <fullName>Problem  web recommendations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rich_Text__c</fullName>
        <label>Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Hello Object Del</label>
    <nameField>
        <label>Hello Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hello Object Del</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>